html crash course

--- a/HTML CRASH COURSE/login.html
+++ b/HTML CRASH COURSE/login.html
@@ -10,7 +10,7 @@
  <h1>Login</h1> 
  <form>
     <div>
-        <label><span>Email</span</label>
+        <label><span>Email</span></label>
         <input type="email" required>
         <button>submit</button>
     </div>
